# MCB_Together

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
components/sdcard/: CMakeLists.txt  Kconfig.projbuild  sd_task.c  sd_task.h  sdcard.c  sdcard.h
components/sensors/: CMakeLists.txt  bmi08x_wrapper.c  bmi08x_wrapper.h
components/sys/: CMakeLists.txt  Kconfig.projbuild  i2c.c  i2c.h  spi.c  spi.h
main/: CMakeLists.txt  MCB_Together.c
